tests/cli_diagnostics/run_struct_not_runnable.golden
tests/fixtures/check_struct_ok.curlee:9:21: error: struct literals not supported in emitter yet
  |
  |     let p : Point = Point{x : 1, y : 2};
  |                     ^^^^^^^^^^^^^^^^^^^
